// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-tree-view component should render 1`] = `
<ic-tree-view class="ic-tree-view-dark" context-id="ic-tree-view-0" heading="Heading">
  <mock:shadow-root>
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </mock:shadow-root>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with icon 1`] = `
<ic-tree-view class="ic-tree-view-dark" context-id="ic-tree-view-1" heading="Heading">
  <mock:shadow-root>
    <div class="heading-area-container">
      <div class="icon-container">
        <slot name="icon"></slot>
      </div>
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </mock:shadow-root>
  <svg fill="#000000" height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
  </svg>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with slotted heading 1`] = `
<ic-tree-view class="ic-tree-view-dark" context-id="ic-tree-view-3">
  <mock:shadow-root>
    <div class="heading-area-container">
      <ic-typography class="ic-typography-subtitle-large tree-view-header">
        <mock:shadow-root>
          <slot></slot>
        </mock:shadow-root>
        <slot name="heading"></slot>
      </ic-typography>
    </div>
    <slot></slot>
  </mock:shadow-root>
  <ic-typography class="ic-typography-subtitle-large" slot="heading" variant="subtitle-large">
    <mock:shadow-root>
      <slot></slot>
    </mock:shadow-root>
    Heading
  </ic-typography>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with tree items 1`] = `
<ic-tree-view class="ic-tree-view-dark" context-id="ic-tree-view-2" heading="Heading">
  <mock:shadow-root>
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </mock:shadow-root>
  <ic-tree-item aria-disabled="false" class="ic-tree-item-dark" context-id="ic-tree-view-2" id="ic-tree-item-0" label="Item 1">
    <mock:shadow-root>
      <div class="ic-tree-item-single tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 1
        </ic-typography>
      </div>
    </mock:shadow-root>
  </ic-tree-item>
  <ic-tree-item aria-disabled="false" class="ic-tree-item-dark" context-id="ic-tree-view-2" id="ic-tree-item-1" label="Item 2">
    <mock:shadow-root>
      <div class="ic-tree-item-single tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 2
        </ic-typography>
      </div>
    </mock:shadow-root>
  </ic-tree-item>
</ic-tree-view>
`;
